--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="CV/Images/Rhonda N.jpeg" alt="Rhonda's Profile Picture"></td>
+      <td><img src="CV/Images/Rhonda N.jpeg/index.html" alt="Rhonda's Profile Picture"></td>
       <td>
         <h1>Rhonda Nebiyou</h1>
         <p><strong><em>Certified Hottie</em></strong></p>
